# tu

./: CHANGELOG.md  ENHANCEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  callable_example.py
misc/docs/: notes.md
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_execute.py  test_registry.py  test_resolve.py
tu/: __init__.py  api.py  cli.py  completion.py  exceptions.py  execute.py  history.py  log.py  models.py  options.py  registry.py  repl.py  resolve.py  utils.py
