[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "tu"
version = "0.0.1"
description = "Terminal Utils - unified entry point for scripts and commands"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cli", "terminal", "scripts", "commands", "productivity"]
authors = [
    { name = "Thor Whalen" },
]
dependencies = []

[project.scripts]
tu = "tu.cli:main"

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/tu"
Repository = "https://github.com/thorwhalen/tu"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]
"examples/*" = [
    "D",
]
"scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
